* BUG#7095 Fix crash in indemnification creation batch because of missing currency
* FEA#7046 Improve indemnification validation and control view
* BUG#6882 Some warnings or errors are no more raised when closing a claim with refused services
* FEA#5907 Manage multiple indemnifications on a given period
* BUG#6632 Fix crash in calculating indemnification gaps when closing a claim
* BUG#6504 Don't invoice when payback method is continuous and invoice has a negative sum
* OTH#0000 Warning fixes on class Configuration when server starts
* BUG#6358 Use today to check bank account when scheduling an indemnification
* BUG#6346 The indemnification creation batch will create indemnifications with the same properties as the last one created for a given service
* FEA#6352 In indemnification creation batch, automatically schedule indemnifications when possible (e.g: no required documents)
* Add indemnifications validation function
* Add default value for payment term in claim configuration

Version 1.12 - 2017-04-28
* FEA#0000 Enhance user experience (interface improvements)
* FEA#0000 Add indemnification start date in claim service
* FEA#0000 Add the batch chain
* FEA#0000 Add extra_details on indemnification detail
* FEA#0000 Allow filtering on loss kind in indemnifications control / validation wizards

Version 1.10 - 2016-11-02
* FEA#0000 Allow scheduling of all indemnifications in one click
* FEA#0000 Improve claim invoices workflow and readability
* FEA#0000 Configure accounting products per benefit, handle taxes
* FEA#0000 Handle automatic indemnification periods creation for annuity benefits
* FEA#0000 Add select service step on indemnification creation wizard
* FEA#0000 Handling overlapping periods and cancelled indemnifications
* FEA#0000 Add deductible date on claim service - Allow to use it in rule engine

Version 1.8 - 2016-07-06
* FEA#0000 Module Creation